Added basic functionality for calculator allowing one operation per equation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Calculator</h1>
     <div id = "container">
-        <div class = "output-field">90 + 50</div>
+        <div class = "output-field-top"></div>
+        <div class = "output-field-bottom"></div>
         <div id = "buttons">
             <button class = "number-btns" id = "1">1</button>
             <button class = "number-btns" id = "2">2</button>
