Fixed bugs in script and updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Calculator</title>
+    <title>Online Calculator</title>
     <link rel = "stylesheet" type = "text/css" href = "style.css">
     <meta charset="UTF-8"/>
 </head>
 <body>
-    <h1>Calculator</h1>
+    <h1>Online Calculator</h1>
     <div id = "container">
         <div class = "output-field-top"></div>
         <div class = "output-field-bottom"></div>
